c/examples/gcc/testsuite/c-c++-common/gomp/sink-5.c
/* { dg-do compile } */
// { dg-additional-options "-Wno-deprecated-openmp" }
void bar (int);

void
foo ()
{
  int i;
#pragma omp parallel for ordered(1)
  for (i = 0; i < 100; ++i)
    {
#pragma omp ordered depend(sink:i-1,)	/* { dg-error "expected '\\\)' before ',' token" } */
      bar (i);
#pragma omp ordered depend(source)
    }
}
